man/psmq_publish.3: fix typo
no_ci
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmq_publish.3
+++ b/man/psmq_publish.3
@@ -85,7 +85,7 @@ Error checking ommited for better readability.
         struct psmq psmq;
         int rpm;
 
-        /* initialize psmq object that will create /pub mqueue for
+        /* initialize psmq object that will create /sub mqueue for
          * receiving data, and will connect to broker of name /brok.
          * Max items in queue is set to 10
          */
