man/psmq_receive.3: fix invalid escape of '\n'
no_ci
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmq_receive.3
+++ b/man/psmq_receive.3
@@ -172,7 +172,7 @@ Note: error checking has been ommited for clarity.
              * callback function to avoid copying data
              */
             psmq_receive(&psmq, can_engine_rpm_receiver, &rpm);
-            printf("rpm %d\n", rpm);
+            printf("rpm %d\en", rpm);
         }
 
         /* after work is finished, we need to deregister from broker to
