--- a/man/psmq_subscribe.3
+++ b/man/psmq_subscribe.3
@@ -40,21 +40,6 @@ If you need to receive all "/can/engine/*" messages except for
 "/can/engine/rpm", you need to either subscribe to all other topics one by one,
 or simply ignore "rpm" topic in you application.
 .PP
-You should subscribe to all needed topics prior to calling
-.BR psmq_enable (3).
-It is because, broker will send
-.B ACK
-message with subscription confirmation, which library normally handles, but if
-you enabled data reception already,
-.B psmq
-library won't read the
-.B ACK
-message, so it doesn't read by mistake message directed to the client.
-You can of course subscribe and unsubscribe with client being enabled, but keep
-in mind, you will receive message from the broker, with topic
-.RB \' -s \'
-and 1 byte (unsigned char )of payload, which will 0 in case subscription
-was successfull, or errno value otherwise.
 .SH "EMBEDDED SYSTEM NOTES"
 .PP
 Both
@@ -70,7 +55,9 @@ Belive it or not, it's to save a lots of memory.
 Remember, it's not
 .BR malloc ()
 you should be afraid of, it's
-.BR free ().
+.BR free (),
+so if you only subscribe at the beginning of program (and bootup in general)
+and then never unsubscribe, you don't have anything to worry about.
 .SH "RETURN VALUE"
 .PP
 0 on success. -1 on errors with appropriate errno set.
@@ -97,7 +84,7 @@ is too long and doesn't fit into transmit buffer.
 You need to recompile
 .B psmq
 with bigger
-.BR PSMQ_TOPIC_MAX .
+.BR PSMQ_MSG_MAX .
 .SH "BUG REPORTING"
 .PP
 Please, report all bugs to "Michał Łyszczek <michal.lyszczek@bofc.pl>"
@@ -107,8 +94,6 @@ Please, report all bugs to "Michał Łyszczek <michal.lyszczek@bofc.pl>"
 .BR psmq-pub (1),
 .BR psmq-sub (1),
 .BR psmq_cleanup (3),
-.BR psmq_disable_threaded (3),
-.BR psmq_enable (3),
 .BR psmq_init (3),
 .BR psmq_publish (3),
 .BR psmq_receive (3),
