man/psmq-pub.1: remove some parenthesis for cleaner overview
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmq-pub.1
+++ b/man/psmq-pub.1
@@ -11,10 +11,10 @@
 .BR -v ]
 .br
 .B psmq-pub
-.RB ( -b
-.IR name )
-.RB ( -t
-.IR topic )
+.B -b
+.I name
+.B -t
+.I topic
 .RB [ -m
 .IR message \ |
 .BR -e \ | \ -B \ ]
