--- a/man/psmq_building.7
+++ b/man/psmq_building.7
@@ -1,4 +1,4 @@
-.TH "psmq_building" "7" "11 February 2019 (v0.1.0)" "bofc.pl"
+.TH "psmq_building" "7" "19 May 2021 (v9999)" "bofc.pl"
 .SH NAME
 .PP
 .B psmq_building
@@ -123,7 +123,7 @@ with autotools. C'mon, if you can use autotools you surely have signals.
 .SH DEPENDENCIES
 .PP
 Broker needs
-.B >=embedlog-0.6.0
+.B >=embedlog-v9999
 for logging.
 It can be downloaded from
 .B https://embedlog.bofc.pl
