man: update man pages
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmq-pub.1
+++ b/man/psmq-pub.1
@@ -91,7 +91,7 @@ cat file-with-content |
 Send sequence of binary data
 printf "\\x13\\x37\\x04\\x51" |
 .B psmq-pub
--b/brok -t/topic1
+-b/brok -t/topic1 -B
 .SH "BUG REPORTING"
 .PP
 Please, report all bugs to "Michał Łyszczek <michal.lyszczek@bofc.pl>"
