man: update man pages
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmq_building.7
+++ b/man/psmq_building.7
@@ -122,8 +122,8 @@ on such system, define this to 1. It is not possible to set this when building
 with autotools. C'mon, if you can use autotools you surely have signals.
 .SH DEPENDENCIES
 .PP
-Broker needs
-.B >=embedlog-v9999
+Broker and psmq-sub need
+.B >=embedlog-v0.6.0
 for logging.
 It can be downloaded from
 .B https://embedlog.bofc.pl
