man/psmqd.1: fix typo
no_ci
Signed-off-by: Michał Łyszczek <michal.lyszczek@bofc.pl>

--- a/man/psmqd.1
+++ b/man/psmqd.1
@@ -51,7 +51,7 @@ can be on of:
 .TP
 .BI -p\  path
 Path to a file where logs from program will be stored.
-If not specified, or files does not exist or is not writale, logs will be
+If not specified, or files does not exist or is not writable, logs will be
 printed to standard error output (stderr).
 .TP
 .BI -b\  name
